{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 112,
  "lineage": "16303318-fcce-414c-e30e-69d6f3e51dc3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335355505:vpc/vpc-07fdf70c5d2bbd27f",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-04725e7f623837571",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0da4e54f51f162af1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07fdf70c5d2bbd27f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-086ac8efe7a62a64c",
            "owner_id": "730335355505"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04658f0995eb91cc3",
            "arn": "arn:aws:ec2:ap-southeast-1:730335355505:instance/i-05a5f045e4175226f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a5f045e4175226f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops_directive_lab_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a9c03353cf70fd64",
            "private_dns": "ip-172-31-19-125.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.19.125",
            "public_dns": "ec2-54-169-201-59.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.169.201.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a3f3342eefb6fec7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "instance_security_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a219dc12d978608",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0116866d624184715"
            ]
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "data.aws_ami.ubuntu-2204-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04658f0995eb91cc3",
            "arn": "arn:aws:ec2:ap-southeast-1:730335355505:instance/i-064e912db237d68af",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-064e912db237d68af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops_directive_lab_kp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b54425cc4a5e61d2",
            "private_dns": "ip-172-31-20-160.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.20.160",
            "public_dns": "ec2-13-213-32-52.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.32.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef7ddcc61d71ca9d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "instance_security_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a219dc12d978608",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0116866d624184715"
            ]
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "data.aws_ami.ubuntu-2204-ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:730335355505:loadbalancer/app/instances-alb/8f8ed233a25e8578",
            "arn_suffix": "app/instances-alb/8f8ed233a25e8578",
            "desync_mitigation_mode": "defensive",
            "dns_name": "instances-alb-1306175958.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:730335355505:loadbalancer/app/instances-alb/8f8ed233a25e8578",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "instances-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-037c5464f85a92b00"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a219dc12d978608"
              },
              {
                "subnet_id": "subnet-05e33bfef17dfe711"
              },
              {
                "subnet_id": "subnet-0eb059ace6cec67e7"
              }
            ],
            "subnets": [
              "subnet-05a219dc12d978608",
              "subnet-05e33bfef17dfe711",
              "subnet-0eb059ace6cec67e7"
            ],
            "vpc_id": "vpc-07fdf70c5d2bbd27f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.instances_alb_sg",
            "data.aws_subnets.default_subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "instances_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:730335355505:listener/app/instances-alb/8f8ed233a25e8578/39e920254e8db805",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:730335355505:listener/app/instances-alb/8f8ed233a25e8578/39e920254e8db805",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:730335355505:loadbalancer/app/instances-alb/8f8ed233a25e8578",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_security_group.instances_alb_sg",
            "data.aws_subnets.default_subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "instances_lb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:730335355505:targetgroup/instance-lb-target-group/e594e4164c0cc2af",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:730335355505:listener-rule/app/instances-alb/8f8ed233a25e8578/39e920254e8db805/b867ad94c2b6c9c5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:730335355505:listener-rule/app/instances-alb/8f8ed233a25e8578/39e920254e8db805/b867ad94c2b6c9c5",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:730335355505:listener/app/instances-alb/8f8ed233a25e8578/39e920254e8db805",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.load_balancer",
            "aws_lb_listener.instances_lb_listener",
            "aws_lb_target_group.instances_lb_target_group",
            "aws_security_group.instances_alb_sg",
            "data.aws_subnets.default_subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "instances_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:730335355505:targetgroup/instance-lb-target-group/e594e4164c0cc2af",
            "arn_suffix": "targetgroup/instance-lb-target-group/e594e4164c0cc2af",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:730335355505:targetgroup/instance-lb-target-group/e594e4164c0cc2af",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "instance-lb-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07fdf70c5d2bbd27f"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335355505:security-group/sg-0116866d624184715",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0116866d624184715",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instance_security_group",
            "name_prefix": "",
            "owner_id": "730335355505",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07fdf70c5d2bbd27f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instances_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:730335355505:security-group/sg-037c5464f85a92b00",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-037c5464f85a92b00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "instances-alb-sg",
            "name_prefix": "",
            "owner_id": "730335355505",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07fdf70c5d2bbd27f"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}